CIRCSTORE-429 Fix code smells